# gst-switch

./: .gitignore  Makefile.am  configure.ac  run-demo.sh
plugins/: README-inter.txt  gstinteraudiosrc.c
python-api/: setup.py  tox.ini
python-api/gstswitch/: controller.py  helpers.py  testsource.py
python-api/tests/integrationtests/: test_controller.py  test_video.py
tests/unit/: test_gstcomposite.c  test_gstswitchserver.c
tools/: Makefile.am  gstaudiovisual.c  gstcase.c  gstcase.h  gstcomposite.c  gstrecorder.c  gstswitchcontroller.c  gstswitchserver.c  gstswitchui.c
tools/capture/: Makefile.am
tools/common-ui/: Makefile.am
tools/ptz/: Makefile.am
tools/server/: Makefile.am
tools/support/: Makefile.am
tools/ui/: Makefile.am
ui/: gstswitchui.glade  none.xcf  pip.xcf  sbs-equal.xcf  sbs-preview.xcf
